# Kairos_SIP

./: .env.example  .gitignore  README.md  alembic.ini  docker-compose.demo.yml  docker-compose.yml  kairos.db  plan_estudio_ing_informatica.json  pyproject.toml  requirements.txt
alembic/: env.py  script.py.mako
alembic/versions/: 0001_initial_schema.py  0002_aulas_docentes_historico.py
config/: README.md  kairos_config.json
data/raw/: aulas_uade.json  docentes_uade.json  estudiantes_uade.json  historico_dictado_uade.json  plan_uade_api.json
data/test/: estudiantes_lic_sistemas.json  plan_lic_sistemas.json
docker/: Dockerfile
frontend/: Dockerfile  README.md  index.html  package-lock.json  package.json
frontend/src/: App.tsx
frontend/src/services/: kairosService.ts
frontend/src/styles/: variables.css
scripts/: ejemplo_demo.py  exportar_json_frontend.py  generar_datos_uade.py  generar_estudiantes_uade.py  generar_recursos_uade.py  parser_correlativas.py  run_api.py  seed_db.py  validar_motor_real.py
src/kairos/: __init__.py
src/kairos/api/: deps.py  main.py
src/kairos/core/: __init__.py  optimizer.py
src/kairos/db/: __init__.py  base.py  models.py  repository.py  session.py
src/kairos/etl/: __init__.py  ingester.py
src/kairos/schemas/: __init__.py  data_models.py
tests/: __init__.py  conftest.py
tests/integration/: __init__.py  test_full_pipeline.py
tests/unit/: __init__.py  test_api.py  test_api_ingesta.py  test_config_loader.py  test_data_models.py  test_ingester.py  test_optimizer.py  test_optimizer_recursos.py  test_repository.py
(+17 files in other folders)
